Fix alignment with baseline grid

--- a/assets/themes/vanderpol-net/css/_modules.scss
+++ b/assets/themes/vanderpol-net/css/_modules.scss
@@ -59,7 +59,7 @@
 .post-block {
   // Box
   border-top: 3px solid #aaa;
-  margin-top: 20px;
+  margin-top: 22px;
   padding-top: 15px;
   
   &:first-child {
