--- a/assets/themes/vanderpol-net/css/styles.css
+++ b/assets/themes/vanderpol-net/css/styles.css
@@ -929,7 +929,7 @@ li {
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/matt\/code\/bookwyrm\.github\.com\/assets\/themes\/vanderpol-net\/css\/_modules\.scss}line{font-family:\0000359}}
 .post-block {
   border-top: 3px solid #aaa;
-  margin-top: 20px;
+  margin-top: 22px;
   padding-top: 15px; }
 @media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/matt\/code\/bookwyrm\.github\.com\/assets\/themes\/vanderpol-net\/css\/_modules\.scss}line{font-family:\0000365}}
   .post-block:first-child {
